Add high-res Firefox logo

--- a/media/css/firefox/whatsnew_40/whatsnew-40.less
+++ b/media/css/firefox/whatsnew_40/whatsnew-40.less
@@ -182,7 +182,7 @@ main {
 .firefox-not-default {
     .main-header {
         padding-top: 219px;
-        background-image: url(/media/img/firefox/whatsnew_40/fx-logo.png);
+        .at2x('/media/img/firefox/whatsnew_40/firefox-logo.png', 191px, 199px);
         background-position: top center;
         background-repeat: no-repeat;
     }
@@ -194,7 +194,7 @@ main {
 .firefox-default {
     .main-header {
         padding-top: 300px;
-        background-image: url(/media/img/firefox/whatsnew_40/fx-logo-large.png);
+        .at2x('/media/img/firefox/whatsnew_40/firefox-logo-large.png', 270px, 281px);
         background-position: top center;
         background-repeat: no-repeat;
     }
@@ -344,7 +344,7 @@ footer[role="contentinfo"] {
     .firefox-default {
         .main-header {
             padding-top: 219px;
-            background-image: url(/media/img/firefox/whatsnew_40/fx-logo.png);
+            .background-size(191px, 199px);
             background-position: top center;
             background-repeat: no-repeat;
         }
