--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -72,13 +72,29 @@
     top: 0;
 }
 
+.release_details {
+    width: 50%;
+    height: 100%;
+    float: left;
+    text-align: left;
+    padding-top: 10px;
+    position: relative;
+}
 .version_wrapper {
-    width:25%;
+    width:100%;
     height: 100%; 
     float: left;
+    text-align:left;
     position: relative;
     padding-top: 10px;
 }
+
+.details_wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 
 .thank_wrapper {
     width: 60%;
@@ -88,7 +104,7 @@
 }
 
 .title_text_wrap {
-    width: 100%;
+    width: 40%;
     position: relative;
 }
 
@@ -179,11 +195,8 @@ background-color: #DFECFA;
     }
 
     h3 {
-        .span(3);
         font-weight: 900;
         font-size: 225%;
-        float:left;
-        padding-left:0px;
     }
 
     h1 {
@@ -622,6 +635,44 @@ article {
     padding-left:5px;
     }
 
+    .title_text_wrap {
+    width: 100%;
+    position: absolute;
+    }
+
+    .release_details {
+    width: 100%;
+    height: 100%;
+    float: left;
+    text-align: left;
+    padding-top: 10px;
+    position: relative;
+}
+
+    .thank_wrapper {
+    width: 100%;
+    height:100%;
+    padding-bottom: 10px;
+    float: left;
+    text-align: left;
+    margin-top: 10px;
+    }
+
+    .version_wrapper {
+    width:100%;
+    height: 100%; 
+    float: left;
+    padding-left:0px;
+    position: relative;
+    padding-top: 10px;
+    }
+
+    .details_wrapper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    }
+
     .notes-head,
     .blueprint .notes-head {
         h1,
@@ -644,7 +695,10 @@ article {
 
     #platform {
         float: none;
-        margin: @baseLine 10px;
+        padding-right: 10px;
+        padding-left: 0px;
+        padding-top:10px;
+        margin:0em;
     }
 
     #new-wrapper {
