--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -56,11 +56,21 @@
     left: 0;
     top: 0;
 }
+
+.release_blurb_wrapper {
+    width: 100%;
+    float:left;
+    text-align:left;
+    padding-bottom: 10px;
+    padding-top:5px;
+}
+
 .release_details {
-    width: 50%;
+    width: 40%;
     height: 100%;
     float: left;
     text-align: left;
+    padding-left:80px;
     padding-top: 10px;
     position: relative;
 }
@@ -80,9 +90,11 @@
 }
 .thank_wrapper {
     width: 60%;
-    float: left;
+    position:relative;
+    word-wrap: break-word;
+    float: right;
     text-align: left;
-    margin-top: 30px;
+    margin-bottom: 50px;
 }
 .title_text_wrap {
     width: 40%;
@@ -528,6 +540,7 @@ article {
         float: left;
         text-align: left;
         padding-top: 10px;
+        padding-left:0px;
         position: relative;
     }
     .thank_wrapper {
@@ -542,13 +555,14 @@ article {
         width: 100%;
         height: 100%;
         float: left;
-        padding-left: 0px;
+        padding-left: 80px;
         position: relative;
         padding-top: 10px;
     }
     .details_wrapper {
         width: 100%;
         height: 100%;
+        padding-left:0px;
         float:left;
         position: relative;
     }
