--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -94,6 +94,7 @@
     word-wrap: break-word;
     float: right;
     text-align: left;
+    padding-top: 5px;
     margin-bottom: 50px;
 }
 .title_text_wrap {
