--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -66,12 +66,14 @@
 }
 
 .release_details {
-    width: 40%;
+    width: 30%;
     height: 100%;
     float: left;
     text-align: left;
     padding-left:80px;
+    padding-right: 0px;
     padding-top: 10px;
+    padding-bottom: 20px;
     position: relative;
 }
 .version_wrapper {
@@ -91,11 +93,12 @@
 .thank_wrapper {
     width: 60%;
     position:relative;
-    word-wrap: break-word;
-    float: right;
-    text-align: left;
-    padding-top: 5px;
-    margin-bottom: 50px;
+    word-wrap:break-word;
+    float:left;
+    text-align:left;
+    padding-top:40px;
+    padding-bottom:20px;
+    padding-left: 10px;
 }
 .title_text_wrap {
     width: 40%;
@@ -541,16 +544,17 @@ article {
         float: left;
         text-align: left;
         padding-top: 10px;
+        padding-bottom: 10px;
         padding-left:0px;
         position: relative;
     }
     .thank_wrapper {
         width: 100%;
         height: 100%;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
+        padding-top: 5px;
         float: left;
         text-align: left;
-        margin-top: 10px;
     }
     .version_wrapper {
         width: 100%;
