[fix bug 1209569] GTM updates

--- a/bedrock/mozorg/templates/mozorg/about/manifesto.html
+++ b/bedrock/mozorg/templates/mozorg/about/manifesto.html
@@ -67,7 +67,7 @@
             </aside>
           </header>
           <div id="principles">
-            <section class="principle" id="principle-01">
+            <section class="principle" id="principle-01" data-ga-quote-number="1" data-ga-quote="modern life">
               <header>
                 <h3><span>{{ _('01') }}</span> {{ _('The Internet is an integral part of modern life—a key component in education, communication, collaboration, business, entertainment and society as a whole.') }}</h3>
               </header>
@@ -89,7 +89,7 @@
                 </footer>
               </div>
             </section>
-            <section class="principle" id="principle-02">
+            <section class="principle" id="principle-02" data-ga-quote-number="2" data-ga-quote="public resource">
               <header>
                 <h3><span>{{ _('02') }}</span> {{ _('The Internet is a global public resource that must remain open and accessible.') }}</h3>
               </header>
@@ -113,7 +113,7 @@
                 </footer>
               </div>
             </section>
-            <section class="principle" id="principle-03">
+            <section class="principle" id="principle-03" data-ga-quote-number="3" data-ga-quote="enrich lives">
               <header>
                 <h3><span>{{ _('03') }}</span> {{ _('The Internet must enrich the lives of individual human beings.') }}</h3>
               </header>
@@ -133,7 +133,7 @@
                 </footer>
               </div>
             </section>
-            <section class="principle" id="principle-04">
+            <section class="principle" id="principle-04" data-ga-quote-number="4" data-ga-quote="individual security">
               <header>
                 <h3><span>{{ _('04') }}</span> {{ _('Individuals’ security and privacy on the Internet are fundamental and must not be treated as optional.') }}</h3>
               </header>
@@ -154,7 +154,7 @@
                 </footer>
               </div>
             </section>
-            <section class="principle" id="principle-05">
+            <section class="principle" id="principle-05" data-ga-quote-number="5" data-ga-quote="shape internet">
               <header>
                 <h3><span>{{ _('05') }}</span> {{ _('Individuals must have the ability to shape the Internet and their own experiences on it.') }}</h3>
               </header>
@@ -175,7 +175,7 @@
                 </footer>
               </div>
             </section>
-            <section class="principle" id="principle-06">
+            <section class="principle" id="principle-06" data-ga-quote-number="6" data-ga-quote="internet effectiveness">
               <header>
                 <h3><span>{{ _('06') }}</span> {{ _('The effectiveness of the Internet as a public resource depends upon interoperability (protocols, data formats, content), innovation and decentralized participation worldwide.') }}</h3>
               </header>
@@ -196,7 +196,7 @@
                 </footer>
               </div>
             </section>
-            <section class="principle" id="principle-07">
+            <section class="principle" id="principle-07" data-ga-quote-number="7" data-ga-quote="open source">
               <header>
                 <h3><span>{{ _('07') }}</span> {{ _('Free and open source software promotes the development of the Internet as a public resource.') }}</h3>
               </header>
@@ -217,7 +217,7 @@
                 </footer>
               </div>
             </section>
-            <section class="principle" id="principle-08">
+            <section class="principle" id="principle-08" data-ga-quote-number="8" data-ga-quote="transparent process">
               <header>
                 <h3><span>{{ _('08') }}</span> {{ _('Transparent community-based processes promote participation, accountability and trust.') }}</h3>
               </header>
@@ -245,7 +245,7 @@
                 </footer>
               </div>
             </section>
-            <section class="principle" id="principle-09">
+            <section class="principle" id="principle-09" data-ga-quote-number="9" data-ga-quote="commercial involvement">
               <header>
                 <h3><span>{{ _('09') }}</span> {{ _('Commercial involvement in the development of the Internet brings many benefits; a balance between commercial profit and public benefit is critical.') }}</h3>
               </header>
@@ -266,7 +266,7 @@
                 </footer>
               </div>
             </section>
-            <section class="principle" id="principle-10">
+            <section class="principle" id="principle-10" data-ga-quote-number="10" data-ga-quote="magnify benefit">
               <header>
                 <h3><span>{{ _('10') }}</span> {{ _('Magnifying the public benefit aspects of the Internet is an important goal, worthy of time, attention and commitment.') }}</h3>
               </header>
