[fix bug 1188084] FxOS Orange Klif Kenya availability

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -160,6 +160,12 @@
             </li>
           </ul>
         </div>
+        <div class="provider" data-country="ke">
+          <h3>{{ _('Kenya') }}</h3>
+          <ul>
+            <li><a class="orange" href="http://orange.co.ke/klif/">Orange</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="lu">
           <h3>{{_('Luxembourg')}}</h3>
           <ul>
