--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -87,6 +87,7 @@
               <option value="it">{{ _('Italy') }}</option>
               <option value="ci">{{ _('Ivory Coast') }}</option>
               <option value="jp">{{ _('Japan') }}</option>
+              <option value="ke">{{ _('Kenya') }}</option>
               <option value="lu">{{ _('Luxembourg') }}</option>
               <option value="mk">{{ _('Macedonia') }}</option>
               <option value="mg">{{ _('Madagascar') }}</option>
@@ -2324,6 +2325,7 @@
                   <ul class="comma-list">
                     <li>{{ _('Cameroon') }}</li>
                     <li>{{ _('Ivory Coast') }}</li>
+                    <li>{{ _('Kenya') }}</li>
                     <li>{{ _('Madagascar') }}</li>
                     <li>{{ _('Mauritius') }}</li>
                     <li>{{ _('Senegal') }}</li>
