--- a/bedrock/mozorg/templates/mozorg/plugincheck.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck.html
@@ -66,8 +66,8 @@
   {# L10n: This is the string used to indicate that the plugin is vulnerable #}
   data-vulnerable="{{ _('vulnerable') }}"
 
-  {# L10n: This is the string used to prepend to Google searches for latest plugin #}
-  data-google-searchq="{{ _('current version plugin') }}"
+  {# L10n: This is the string used to prepend to DuckDuckGo searches for latest plugin #}
+  data-ddg-searchq="{{ _('current version plugin') }}"
 
   data-media-url="{{ static('') }}"
 {% endblock %}
